--- a/src/style.css
+++ b/src/style.css
@@ -9,10 +9,68 @@
 	font-family: var(--mainFont);
 	box-sizing: border-box;
 }
+
 body,
 html {
 	margin: 0;
 	padding: 0;
 	height: 100%;
 	width: 100%;
+}
+
+header {
+	position: relative;
+	min-width: 100%;
+	min-height: 40%;
+	filter: drop-shadow(0 0 0.5rem rgb(56, 56, 56));
+}
+
+.headerBg {
+	position: absolute;
+	width: 100%;
+	min-height: 35%;
+	background-color: var(--bgBlue);
+	transform: skewY(-6deg);
+	transform-origin: bottom left;
+	filter: drop-shadow(0 0 0.75rem rgb(56, 56, 56));
+}
+
+.icon {
+	height: 32px;
+	width: auto;
+}
+.aboutMeContainer {
+	display: flex;
+	flex-direction: column;
+	max-width: 500px;
+	min-height: 300px;
+	background-color: white;
+	padding: 1rem;
+}
+
+p {
+	flex: 1;
+}
+
+.introduction img {
+	height: 400px;
+	width: auto;
+}
+
+.introduction {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding: 2rem;
+}
+.links {
+	display: grid;
+	grid-auto-flow: column;
+	grid-template-columns: 1fr;
+	grid-auto-columns: max-content;
+	gap: 1rem;
+	justify-items: end;
+}
+a {
+	text-decoration: none;
 }
