--- a/src/style.css
+++ b/src/style.css
@@ -51,8 +51,7 @@ header {
 p {
 	flex: 1;
 }
-
-.introduction img {
+.imgContainer img {
 	height: 400px;
 	width: auto;
 }
@@ -71,6 +70,22 @@ p {
 	gap: 1rem;
 	justify-items: end;
 }
-a {
-	text-decoration: none;
+
+@media (max-width: 1000px) {
+	.introduction {
+		display: table;
+		margin: 0px auto;
+	}
+	.aboutMeContainer {
+		display: block;
+		margin-top: 10%;
+
+		min-height: 500px;
+		text-align: justify;
+	}
+
+	.imgContainer {
+		float: left;
+		translate: -20px -10px;
+	}
 }
