--- a/src/style.css
+++ b/src/style.css
@@ -18,12 +18,6 @@ html {
 	width: 100%;
 }
 
-header {
-	position: relative;
-	min-width: 100%;
-	min-height: 40%;
-}
-
 h1 {
 	font-size: 2.2rem;
 }
@@ -34,28 +28,9 @@ h2 {
 	font-weight: 400;
 }
 
-.headerBg {
-	position: absolute;
-	width: 100%;
-	min-height: 35%;
-	background-color: var(--bgBlue);
-	transform: skewY(-6deg);
-	transform-origin: bottom left;
-	filter: drop-shadow(0 0 0.75rem rgb(56, 56, 56));
-}
-
 .icon {
 	height: 24px;
 	width: auto;
-}
-.aboutMeContainer {
-	display: flex;
-	flex-direction: column;
-	max-width: 500px;
-	min-height: 300px;
-	background-color: white;
-	padding: 1rem;
-	filter: drop-shadow(0 0 0.25rem rgb(56, 56, 56));
 }
 
 .imgContainer img {
@@ -71,6 +46,7 @@ footer .imgContainer img {
 .imgContainer {
 	position: relative;
 }
+
 .imgContainer h1 {
 	color: white;
 	position: absolute;
@@ -80,17 +56,87 @@ footer .imgContainer img {
 	width: max-content;
 	transform: translate(-50%, -50%);
 }
-.introduction,
-footer .introduction {
+a {
+	text-decoration: none;
+}
+/* CSS styles for header */
+header {
+	position: relative;
+	min-width: 100%;
+	min-height: 40%;
+}
+
+.headerBg {
+	position: absolute;
+	width: 100%;
+	min-height: 35%;
+	background-color: var(--bgBlue);
+	transform: skewY(-6deg);
+	transform-origin: bottom left;
+	filter: drop-shadow(0 0 0.75rem rgb(56, 56, 56));
+}
+
+.aboutMeContainer {
+	display: flex;
+	flex-direction: column;
+	max-width: 500px;
+	min-height: 300px;
+	background-color: white;
+	padding: 1rem;
+	filter: drop-shadow(0 0 0.25rem rgb(56, 56, 56));
+}
+
+.contentSection,
+footer .contentSection {
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	padding: 2rem;
 }
-footer .introduction {
-	justify-content: flex-start;
+/* CSS styles for header */
+
+/* CSS styles for main content */
+
+.gridContainer {
+	display: grid;
 	gap: 2rem;
+	justify-items: center;
+	grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+	width: 100%;
+}
+.project {
+	display: flex;
+	max-width: 380px;
+	flex-direction: column;
+	background-color: white;
+	filter: drop-shadow(0 0.2rem 0.2rem rgb(56, 56, 56));
+}
+.headingContainer,
+.project p {
+	display: flex;
+	align-items: center;
+	padding: 0px 1rem 0px 1rem;
+}
+
+.headingContainer h3 {
+	flex: 1;
+}
+
+.screenshot {
+	background-color: rgb(85, 180, 192);
+	min-height: 18rem;
+}
+main .contentSection {
+	display: flex;
+	flex-direction: column;
+	align-items: start;
 	width: 80%;
+}
+/* CSS styles for main content */
+
+/* CSS styles for footer */
+footer .contentSection {
+	width: 76%;
 }
 
 .contact {
@@ -107,12 +153,6 @@ footer {
 	color: white;
 	background-color: var(--bgBlue);
 }
-main .introduction {
-	display: flex;
-	flex-direction: column;
-	align-items: start;
-	width: 80%;
-}
 
 .links {
 	display: grid;
@@ -123,47 +163,12 @@ main .introduction {
 	justify-items: end;
 }
 
-footer .introduction .links {
+footer .contentSection .links {
 	grid-template-columns: max-content;
 }
-
-.gridContainer {
-	display: grid;
-	gap: 2rem;
-	justify-items: center;
-	grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
-	width: 100%;
-}
-.project {
-	display: flex;
-	max-width: 380px;
-	flex-direction: column;
-	background-color: white;
-	filter: drop-shadow(0 0.2rem 0.2rem rgb(56, 56, 56));
-}
-
-.headingContainer,
-.project p {
-	display: flex;
-	align-items: center;
-	padding: 0px 1rem 0px 1rem;
-}
-
-.headingContainer h3 {
-	flex: 1;
-}
-
-.screenshot {
-	background-color: rgb(85, 180, 192);
-	min-height: 18rem;
-}
-
-a {
-	text-decoration: none;
-}
-
+/* CSS styles for footer */
 @media (max-width: 995px) {
-	main .introduction {
+	main .contentSection {
 		width: 100%;
 	}
 }
@@ -171,17 +176,17 @@ a {
 	.gridContainer {
 		grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
 	}
-	footer .introduction {
+	footer .contentSection {
 		gap: 2rem;
 	}
 	.project {
 		min-width: 270px;
 	}
 
-	main .introduction {
+	main .contentSection {
 		width: 100%;
 	}
-	.introduction {
+	.contentSection {
 		display: table;
 		margin: 0px auto;
 	}
@@ -212,10 +217,10 @@ a {
 }
 
 @media (max-width: 500px) {
-	footer .introduction .links {
+	footer .contentSection .links {
 		grid-template-columns: 1fr 1fr 1fr;
 	}
-	.introduction {
+	.contentSection {
 		display: flex;
 		flex-direction: column;
 		padding: 1rem;
