--- a/src/style.css
+++ b/src/style.css
@@ -65,7 +65,9 @@ header {
 	min-width: 100%;
 	min-height: 40%;
 }
-
+header .contentSection .imgContainer {
+	animation: fade-in-img 1000ms ease-in-out;
+}
 .headerBg {
 	position: absolute;
 	width: 100%;
@@ -84,10 +86,10 @@ header {
 	background-color: white;
 	padding: 1rem;
 	filter: drop-shadow(0 0 0.25rem rgb(56, 56, 56));
+	animation: fade-in 1000ms ease-in-out;
 }
 
-.contentSection,
-footer .contentSection {
+.contentSection {
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -167,6 +169,29 @@ footer .contentSection .links {
 	grid-template-columns: max-content;
 }
 /* CSS styles for footer */
+
+@keyframes fade-in {
+	from {
+		transform: translateX(100%);
+		opacity: 0;
+	}
+
+	to {
+		transform: translateX(0%);
+	}
+}
+
+@keyframes fade-in-img {
+	from {
+		transform: translateX(-100%);
+		opacity: 0;
+	}
+
+	to {
+		transform: translateX(0%);
+	}
+}
+
 @media (max-width: 995px) {
 	main .contentSection {
 		width: 100%;
